--- a/charts/cs-unoconv/values.yaml
+++ b/charts/cs-unoconv/values.yaml
@@ -5,19 +5,8 @@ global:
       enabled: true
 
 imagePullPolicy: IfNotPresent
-unoconv:
-  repo: hub.cellosign.com/cellosign/soffice-convert
-  tag: 4.2.0
-  replicas: 1
-  affinity: {}
-  resources:
-    limits:
-      memory: 512Mi
-    requests:
-      cpu: 100m
-      memory: 64Mi
-  servicePriorityName: feature
 
+loggingLevel: INFO
 
 unoconvsvc:
   repo: hub.cellosign.com/cellosign/soffice-convert
@@ -33,5 +22,5 @@ unoconvsvc:
   servicePriorityName: feature
 
 sentry:
-  sentryDsnKey: 'dsn-soffice-convert'
-  rate: '50'
+  sentryDsnKey: "dsn-soffice-convert"
+  rate: "50"
